src/main/java/com/example/articles/errors/ArticleNotFoundException.java
package com.example.articles.errors;

public class ArticleNotFoundException extends RuntimeException {
    public ArticleNotFoundException(String message) {
        super(message);
    }
}
